fix(jokul): Rett opp størrelse og spacing på valg i Autosuggest, Combobox og Select slik at nedtrekkslistene fremstår likt på tvers av størrelser.

--- a/packages/jokul/src/components/select/styles/select.scss
+++ b/packages/jokul/src/components/select/styles/select.scss
@@ -8,11 +8,11 @@
         --jkl-select-arrow-right: var(--jkl-unit-05);
         --border-width: #{jkl.rem(1px)};
         --border-radius: var(--jkl-border-radius-s);
-        --min-option-height: min(var(--jkl-unit-60), 3rem);
+        --min-option-height: min(var(--jkl-unit-60), #{jkl.rem(48px)});
 
         /* Vi må trekke fra bredden til rammen for å få riktig høyde */
         --button-padding: calc(var(--jkl-unit-15) - var(--border-width)) calc(0.75em - var(--border-width));
-        --option-padding: var(--jkl-unit-05) 0.75em;
+        --option-padding: var(--jkl-unit-10);
 
         display: block;
         position: relative;
